# gait-analyzer

./: README.md
ble-test/: Cargo.toml  measure.py
ble-test/.cargo/: config.toml
ble-test/src/: led.rs  main.rs
demo/src/: main.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: bluetooth.rs  error.rs  led.rs  main.rs  sensor.rs  step.rs
firmware/src/bluetooth/: characteristics.rs  mod.rs
i2c-test/: Cargo.toml  data.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data_step.csv  visualize.ipynb
i2c-test/mpu-6050/: Cargo.toml
i2c-test/src/: main.rs  registers.rs
i2c-test/src/mpu5060/: clock_source.rs  data.rs  i2c_slave.rs  mod.rs  quaternion.rs  registers.rs  vector.rs
i2c-test/src/mpu5060/dmp/: firmware.rs  packet.rs
lib-math/: Cargo.toml
lib-math/src/: euler_angles.rs  float_utils.rs  lib.rs  quaternion.rs  vector.rs
lib-math/src/tests/: mod.rs  quaternion.rs  vector.rs
lib-mpu6050/: Cargo.toml
lib-mpu6050/.cargo/: config.toml
lib-mpu6050/src/: accel_scale_range.rs  data.rs  dlpf_mode.rs  gyro_scale_range.rs  lib.rs  mpu6050.rs  registers.rs  utils.rs
lib-mpu6050/src/dmp/: firmware.rs  mod.rs  packet.rs
lib-processing/: Cargo.toml
lib-processing/src/: algorithm.rs  lib.rs  sensor_fusion.rs  step_detection.rs  tests.rs  utils.rs
lib-queue/: Cargo.toml
lib-queue/src/: lib.rs
sd-card-test/: Cargo.toml
sd-card-test/src/: main.rs
sdcard/: Cargo.toml
sdcard/src/: main.rs
test-manual-processing/: Cargo.toml
test-manual-processing/.cargo/: config.toml
test-manual-processing/src/: main.rs
test-mpu6050/: Cargo.toml
test-mpu6050/src/: main.rs
test-processing/: .gitignore  Cargo.toml  analysis.ipynb  analysis_sensor_fusion.ipynb  box.py  config.py  gravity_calibration.ipynb  subsample.ipynb  view_parts.py
test-processing/recordings/: bling2.csv  bling2_galop.csv  bling2_standing.csv  bling2_trot.csv  bling2_walk.csv  donanta1.csv  donanta2.csv  donanta3.csv  donanta4.csv  donanta5.csv  donanta6.csv  up_down3.csv
test-processing/src/: main.rs
test-sdcard/: Cargo.toml
test-sdcard/src/: bytewriter.rs  main.rs  rtc_source.rs
time-test/: Cargo.toml
time-test/src/: main.rs
