[package]
name = "sd-card-test"
version = "0.1.0"
authors = ["matthijsreyers <matthijscrafter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-sdmmc = { version = "0.8.0", features = [], default-features = false }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = [ "esp32c3" ] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
