[package]
name = "sdcard"
version = "0.1.0"
authors = ["matthijsreyers <matthijscrafter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.16.0", features = [ "esp32c3" ] }
esp-println = { version = "0.11.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
embedded-hal = "0.2.7"
embedded-io = "0.6.0"
esp-hal-common = { version = "0.13.0", features = ["esp32c3"] }
embedded-sdmmc = { version = "0.6.0", features = [], default-features = false }

# Rust debug is too slow.
# For debug builds always builds with some optimization
[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
