[package]
name = "test-mpu6050"
version = "0.1.0"
authors = ["matthijsreyers <matthijsreyers@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
# esp-backtrace = { version = "0.14.2", features = [
#     "esp32c3",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }
hal = { package = "esp-hal", version = "0.21.1", features = [ "esp32c3" ] }
log = { version = "0.4.22" }
math = { package = "lib-math", path = "../lib-math" }
mpu6050 = { package = "lib-mpu6050", path = "../lib-mpu6050", features = ["dmp20", "hal"], default-features = false}
embedded-sdmmc = { version = "0.6.0", features = [], default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
sdcard = []
